<resources>
    <string name="app_name">gymanager-app</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="auth">Войти</string>

    <string name="credits_preferences">credits_preferences</string>
    <string name="login_preferences">login</string>
    <string name="password_preferences">password</string>
    <string name="token_preferences">token</string>

    <string name="workouts">Занятия</string>
    <string name="start_date">Дата:</string>
    <string name="description">Описание:</string>
    <string name="exercises">Упражнения</string>
    <string name="results_count">Подходов:</string>
    <string name="best_result">Лучший результат:</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="edit">Изменить</string>
    <string name="save">Сохранить</string>
    <string name="birth_date">День рождения:</string>
    <string name="phone">Телефон:</string>
    <string name="name">Имя:</string>
    <string name="exercise_type">Упражнение:</string>
    <string name="exercise_results">Подходы</string>
    <string name="weight">Вес:</string>
    <string name="repeats">Повторений:</string>
    <string name="logout">Выход</string>
</resources>